README.md, jar separati